@@ -4,7 +4,7 @@ The current branch (1.3), requires the following versions of gcc and binutils:
 
   Tool            Minimal Version       Preferred Version
   ===========     ===============       =================
-  binutils            2.13                   2.15
+  binutils            2.13                   2.16
   gcc                 3.3                 Latest 3.4.x
 
 For details on installing and using AVR Libc, see the users manual in the
